infraestructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: devops-app
  labels:
    app: fastapi
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      # Security Context: Rodando como usuário não-root
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        - name: fastapi-api
          image: ${ACR_NAME}.azurecr.io/fastapi-app:${IMAGE_TAG}
          ports:
            - containerPort: 8000
          # Resources: Essencial para o HPA funcionar
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          # Health Checks Profissionais
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/db # Verifica se a API e o Banco estão ok
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          # Injeção de Secrets do Key Vault via CSI Driver
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "fastapi-secret-provider"
