infraestructure/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: devops-app
  annotations:
    # Se estiver usando o Nginx Ingress Controller
    kubernetes.io/ingress.class: nginx
    # Habilita SSL Redirect (Boas práticas de segurança)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Limite de carga para evitar ataques simples de DoS
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  name: http-api # Referenciando pelo nome que definimos no Service
